--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     if(findProject(':core') != null) {
         implementation project(":core")
     } else {
-        implementation "com.github.EricssonBroadcastServices.EnigmaRiverAndroid:core:r3.2.0-DOCUMENTATION-UPDATES"
+        implementation "com.github.EricssonBroadcastServices.EnigmaRiverAndroid:core:r3.2.1-BETA-1"
     }
     api 'com.google.android.gms:play-services-cast-framework:17.1.0'
     testImplementation 'junit:junit:4.12'
@@ -45,6 +45,6 @@ dependencies {
     if(findProject(':internalTestUtils') != null) {
         testImplementation project(":internalTestUtils")
     } else {
-        testImplementation 'com.github.EricssonBroadcastServices.EnigmaRiverAndroid:internalTestUtils:r3.2.0-DOCUMENTATION-UPDATES'
+        testImplementation 'com.github.EricssonBroadcastServices.EnigmaRiverAndroid:internalTestUtils:r3.2.1-BETA-1'
     }
 }
