--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     if(findProject(':core') != null) {
         implementation project(":core")
     } else {
-        implementation "com.github.EricssonBroadcastServices.EnigmaRiverAndroid:core:r3.5.5"
+        implementation "com.github.EricssonBroadcastServices.EnigmaRiverAndroid:core:r3.6.0-BETA-1"
     }
     api 'com.google.android.gms:play-services-cast-framework:21.0.1'
     testImplementation 'junit:junit:4.12'
@@ -45,6 +45,6 @@ dependencies {
     if(findProject(':internalTestUtils') != null) {
         testImplementation project(":internalTestUtils")
     } else {
-        testImplementation 'com.github.EricssonBroadcastServices.EnigmaRiverAndroid:internalTestUtils:r3.5.5'
+        testImplementation 'com.github.EricssonBroadcastServices.EnigmaRiverAndroid:internalTestUtils:r3.6.0-BETA-1'
     }
 }
