--- a/build.gradle
+++ b/build.gradle
@@ -33,11 +33,15 @@ android {
     }
 }
 
+repositories {
+    maven { url "https://jitpack.io" } //Needed for EricssonBroadcastServices.ExoPlayer
+}
+
 dependencies {
     if(findProject(':core') != null) {
         implementation project(":core")
     } else {
-        implementation "com.github.EricssonBroadcastServices.EnigmaRiverAndroid:core:r3.6.3"
+        implementation "com.github.EricssonBroadcastServices.EnigmaRiverAndroid:core:r3.6.4-BETA-1"
     }
     api 'com.google.android.gms:play-services-cast-framework:21.0.1'
     testImplementation 'junit:junit:4.12'
@@ -45,6 +49,6 @@ dependencies {
     if(findProject(':internalTestUtils') != null) {
         testImplementation project(":internalTestUtils")
     } else {
-        testImplementation 'com.github.EricssonBroadcastServices.EnigmaRiverAndroid:internalTestUtils:r3.6.3'
+        testImplementation 'com.github.EricssonBroadcastServices.EnigmaRiverAndroid:internalTestUtils:r3.6.4-BETA-1'
     }
 }
