--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_10
-        targetCompatibility JavaVersion.VERSION_1_10
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 
     testOptions {
@@ -41,7 +41,7 @@ dependencies {
     if(findProject(':core') != null) {
         implementation project(":core")
     } else {
-        implementation "com.github.EricssonBroadcastServices.EnigmaRiverAndroid:core:r3.7.5-BETA-9"
+        implementation "com.github.EricssonBroadcastServices.EnigmaRiverAndroid:core:r3.7.5-BETA-10"
     }
     api 'com.google.android.gms:play-services-cast-framework:21.0.1'
     testImplementation 'junit:junit:4.12'
@@ -49,6 +49,6 @@ dependencies {
     if(findProject(':internalTestUtils') != null) {
         testImplementation project(":internalTestUtils")
     } else {
-        testImplementation 'com.github.EricssonBroadcastServices.EnigmaRiverAndroid:internalTestUtils:r3.7.5-BETA-9'
+        testImplementation 'com.github.EricssonBroadcastServices.EnigmaRiverAndroid:internalTestUtils:r3.7.5-BETA-10'
     }
 }
